--- a/.github/workflows/discord_notify.yml
+++ b/.github/workflows/discord_notify.yml
@@ -18,3 +18,29 @@ jobs:
         if: github.event_name == 'pull_request'
         uses: appleboy/discord-action@v1.2.0
         with:
+          webhook_url: ${{ secrets.URL_PRUEBAS_DISCORD}}
+          message: |
+            **Nuevo Evento en Pull Request**
+            -  **Acción**: ${{ github.event.action }}
+            -  **Repositorio**: ${{ github.repository }}
+            -  [Ver PR](${{ github.event.pull_request.html_url }})
+            -  **Autor**: ${{ github.actor }}
+
+      - name: Notify Tests Channel (Workflows)
+        if: github.event_name == 'workflow_run'
+        uses: appleboy/discord-action@v1.2.0
+        with:
+          webhook_url: ${{ secrets.URL_DESARROLLO_DISCORD}}
+          message: |
+            **Resultado de Workflow**
+            - **Workflow**: ${{ github.event.workflow_run.name }}
+            - **Estado**: ${{ github.event.workflow_run.conclusion }}
+            - **Repositorio**: ${{ github.repository }}
+            - [Ver Detalles](${{ github.event.workflow_run.html_url }})
+            - **Ejecutado por**: ${{ github.actor }}
+
+      - name: Notify General Channel (Opcional)
+        uses: appleboy/discord-action@v1.2.0
+        with:
+          webhook_url: ${{ secrets.DISCORD_GENERAL_WEBHOOK }}
+          message: " ¡Hola equipo! Recuerden revisar los PRs y tests."
