--- a/.github/workflows/discord_notify.yml
+++ b/.github/workflows/discord_notify.yml
@@ -3,7 +3,7 @@ name: Discord Notifications
 on:
   push:
     branches:
-      - feature--001-vazquez
+      - BC-api-01
   pull_request:
     branches:
       - develop
